docs/style.css
/*BODY*/
body{
background-image: url("images/plantleaves.jpg");
background-color: /*BurlyWood*/ #FFF3CD;
font-family: Garamond, serif;
font-size: 1.2vw
}

/*SECTIONS*/
section {
background-color: #FFF3CD;
margin-left: 20vw;
margin-right: 20vw;    
padding: .5em;
}

section#header {
background-color: #1a0d00;
font-size: 2vw;
color: #EFEFEF;
margin-left: .5vw;
margin-right: .5vw; 
padding: .2em;
}

/*LISTS*/
li {
padding: .5em;
}

ul {
background-color: #FFF3CD;
padding: .5em;
margin-left: 1vw;
}

li ul {
list-style-type: circle;
font-size: .9vw;
}

/*HORIZONTAL LINES*/
hr {
border: .2vw solid black;
border-radius: 5vw;
}

hr#light {
border: .2vw solid #EFEFEF;
border-radius: 5vw;
}

/*PARAGRAPHS*/
p {list-style-type: lower-alpha;
background-color: #FFF3CD;
padding: .5em;
text-align: center;
margin-left: 20vw;
margin-right: 20vw;
font-size: 1.5vw;
}

/*fffee4*/
/*HEADERS*/
h1{
background-color: #1a0d00;
font-size: 2vw;
padding: .2em;
color: #EFEFEF;
text-align: center;
}

h2 {list-style-type: lower-alpha;
background-color: #1a0d00;
padding: 1em;
color: #EFEFEF;
text-align: center;
}

h3 {list-style-type: lower-alpha;
background-color: #FFF3CD;
padding: .2em;
text-align: center;
margin-left: 20vw;
margin-right: 20vw;
font-size: 2vw;
}

/*IMAGES/GIFS*/
img {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 25%;
}

/*DIVISIONS*/
div.menuA{
text-align:center;
background-color: #1a0d00;
color: #EFEFEF;
font-size: 2vw;
padding: 1vw;
padding-left: 3vw;
padding-right: 3vw;
}

/*LINKS*/
/* unvisited link */
a:link {
  color: #C2FF00;
}

/* visited link */
a:visited {
  color: #669900;
}

/* mouse over link */
a:hover {
  color: #ff1a66;
}

/* selected link */
a:active {
  color: #ff1a66;
}

